--- a/package.json
+++ b/package.json
@@ -1,32 +1,44 @@
 {
-  "name": "bcrypt-generator-checker-back-end",
+  "name": "bcrypt-generator-checker",
   "version": "1.0.0",
-  "description": "bcrypt-generator-checker-back-end",
-  "main": "app.js",
+  "description": "Bcrypt Hash Generator & Checker backend",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
-    "build": "npm i && npm update",
+    "build": "npm install && npm update",
     "local": "nodemon app.js",
     "deploy": "serverless deploy",
     "debug": "nodemon --inspect app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "connection": "node ./infrastructure/connection.js"
   },
-  "author": "Gabriel de Rezende Gonçalves <contato@gabireze.com.br> (https://github.com/gabireze)",
-  "license": "ISC",
+  "author": {
+    "name": "Gabriel de Rezende Gonçalves",
+    "email": "contato@gabireze.com.br",
+    "url": "https://gabireze.com.br/"
+  },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/gabireze/bcrypt-generator-checker-back-end.git"
   },
+  "keywords": [
+    "bcrypt",
+    "hash",
+    "generator",
+    "checker",
+    "backend",
+    "express",
+    "serverless"
+  ],
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "serverless-http": "^2.7.0"
+    "dotenv": "^16.1.1",
+    "express": "^4.18.2",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12",
-    "serverless-dotenv-plugin": "^3.9.0"
+    "nodemon": "^2.0.22"
   }
 }
