--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "local": "nodemon app.js",
     "deploy": "serverless deploy",
     "debug": "nodemon --inspect app.js",
+    "swagger-autogen": "node ./swagger.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "connection": "node ./infrastructure/connection.js"
   },
@@ -36,9 +37,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.1",
     "express": "^4.18.2",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "swagger-autogen": "^2.23.1"
   }
 }
